# pymablock

./: .codespellrc  .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .pre-commit-config.yaml  .qt-research-project  .readthedocs.yaml  AUTHORS.md  BilayerGraphene.ipynb  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  MakingKPMwork.py  README.md  mask_redesign.md  minimal_example.py  noxfile.py  number_ordered_form_plan.md  optimization.md  pmb_ci.yml  pyproject.toml  pytest.ini  setup
.github/: copilot-instructions.md
.hooks/: pre-commit
.virtual_documents/docs/source/: index.md
analysis/: 2_qdts.ipynb  algorithm_comparison.py  codes  convergence on random hamiltonian.ipynb  guessing.py  higher_orders.ipynb  kp_example.ipynb  kp_example_1.ipynb  kp_example_2.ipynb  main.ipynb  test_perturbation.ipynb  trace_perturbation.ipynb  wire_exact.pickle  wire_exact_0.pickle  wire_example.ipynb
auxilliary_functions/tests/: test_trace_perturbation.py
codes/: AreTheyTheSame?.py  algorithm_comparison.py  api_design.py  coding_meeting_file.py  combine.py  example.py  generating_s_terms.ipynb  guessing.ipynb  guessing.py  higher_order_lowdin.py  kpm.py  kpm_funcs.py  kpm_vs_arrays.py  lowdin.py  minimal_example.py  minimal_symbolic_example.py  minimal_synmbolic_example.py  misc.py  old_lowdin.py  old_perturbationS.py  operator_perturbation.py  perturbationS.old.py  perturbationS.py  perturbative_model.py  poly_kpm.py  polynomial_orders_U.py  qsymm  test_polynomial_orders_U.py  trace_perturbation.py
codes/tests/: test_higher_order.py  test_poly_kpm.py  test_polynomial_orders_U.py  test_trace_perturbation.py
docs/: environment.yml
docs/source/: CHANGELOG.md  CITING.md  algorithms.md  conf.py  derivation.md  developer.md  index.md  lindbladian_perturbation_theory.md  nonhermitian_algorithm.md  radius.md  second_quantization.md
docs/source/_build/html/_static/css/: custom.css
docs/source/_templates/: layout.html
docs/source/algorithm/: algorithm.md  expanded.md  kpm.md
docs/source/background/: background.md  derivation.md  kpm.md
docs/source/documentation/: documentation.md  lowdin.rst  modules.rst  pymablock.md  pymablock.rst
docs/source/tutorial/: andreev_supercurrent.md  bilayer_graphene.md  dispersive_shift.md  getting_started.md  induced_gap.md  induced_gap_tutorial.md  jaynes_cummings.md  jaynes_cummings_tutorial.md  jaynes_cummings_tutorial.py  lindblad_adiabatic_elimination.md  matplotlib.rc  matplotlibrc  numeric_hamiltonians.md  spin_rwa_floquet.md  symbolic_hamiltonians.md  tutorial.md  tutorial.rst
lowdin/: README.md  __init__.py  block_diagonalization.py  kpm.py  kpm_funcs.py  linalg.py  misc.py  poly_kpm.py  polynomial_orders_U.py  series.py
lowdin/docs/source/: conf.py  index.rst
lowdin/docs/source/tutorial/: tutorial.rst
lowdin/tests/: test_block_diagonalization.py  test_linalg.py  test_poly_kpm.py  test_polynomial_orders_U.py  test_series.py
notes/: README.md  notes.tex  perturbation_kpm.tex
paper/: SciPost.cls  SciPost_bibstyle.bst  additional_info.tex  algorithm.tex  algorithms.ipynb  algorithms.md  benchmark.md  benchmark.tex  conclusion.md  conclusion.tex  constructing-an-effective-model.tex  expanded.md  finding_effective_model.ipynb  finding_effective_model.md  implementation.md  implementation.tex  introduction.md  introduction.tex  main.bib  paper.md  paper.tex
paper/code_figures/: benchmark_bandstructure.py  benchmark_matrix_products.py  diagrams_series.py  expressions.py  lattice_system.py  matplotlibrc  selective_diagonalization.py  timer.py  transmons.py
paper/scipost-template/: SciPost.cls  template.tex  template.yml
publication/: README.md
pymablock/: __init__.py  algorithm.py  algorithm_parsing.py  algorithms.py  block_diagonalization.py  experimenting.py  kpm.py  linalg.py  number_ordered_form.py  operators.py  second_quantization.py  series.py
pymablock/tests/: environment.yml  test_block_diagonalization.py  test_kpm.py  test_linalg.py  test_nonhermitian_block_diagonalization.py  test_number_ordered_form.py  test_second_quantization.py  test_series.py  test_tunable_coupler.py
pymablock/tests/test_block_diagonalization/: test_number_products.yml  test_number_products_one_block.yml  test_number_products_three_block.yml  test_number_products_two_block.yml
pymablock/tests/test_nonhermitian_block_diagonalization/: test_number_products_nonhermitian_one_block.yml  test_number_products_nonhermitian_three_block.yml  test_number_products_nonhermitian_two_block.yml
pymablock/tests/test_second_quantization/: test_symbolic_expression_simplification_regression.yml
pymablock/tests/test_tunable_coupler/: test_tunable_coupler_symbolic_output_regression.yml
trace_perturbation/: kpm.py  trace_perturbation.py
trace_perturbation/tests/: test_trace_perturbation.py
