[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pymablock"
dynamic = ["version"]
authors = [
  {name="Pymablock developers"},
]
description = "Numerical and symbolic implementation of quasi-degenerate perturbation theory"
readme = "README.md"
# This project follows https://scientific-python.org/specs/spec-0000/
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "sympy>=1.10",
    "python-mumps>=0.0.1,<0.1",
    "packaging>=22.0",  # For version parsing
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "pymablock/_version.py"

[project.urls]
"Documentation" = "https://pymablock.readthedocs.io/en/latest/"
"Repository" = "https://gitlab.kwant-project.org/qt/pymablock"
"Bug Tracker" = "https://gitlab.kwant-project.org/qt/pymablock/-/issues"

[tool.hatch.build.targets.wheel]
packages = ["pymablock"]

[tool.hatch.build.targets.sdist]
include = [
  "pymablock",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "pytest.ini",
  "AUTHORS.md",
  "CITATION.cff",
]

[tool.ruff]
line-length = 90
exclude = [
  "paper",  # not part of the library
  "pymablock/_version.py",  # generated automatically
  "noxfile.py",
  "docs/source/conf.py",
  "pymablock/__init__.py",
  "trace_perturbation/*",  # not part of the library
]
lint.extend-select = [
  "N",
  "D",
  "W",
  "I",
  "T10",
  "Q",
  "RSE",
  "RET",
  "TCH",
  "INT",
  "ARG",
  "R",
  "FLY",
  "RUF",
]
lint.ignore = [
"N802",  # invalid-function-name
"N803",  # invalid-argument-name
"N806",  # non-lowercase-variable-in-function
]
lint.fixable = ["ALL"]
lint.unfixable = []
[tool.ruff.lint.extend-per-file-ignores]
"pymablock/block_diagonalization.py" = [
  "RET503",  # implicit-return
  "RET504",  # unnecessary-assign
]
"pymablock/tests/*.py" = [
  "RET504",
  "D",  # documentation in tests not necessary
]

[tool.mypy]
# Not using mypy yet, but this is a start.
python_version = "3.9"
allow_redefinition = true
[[tool.mypy.overrides]]
module = [
  "scipy",
  "scipy.sparse",
  "scipy.sparse.linalg",
  "scipy.sparse.linalg._interface",
]
ignore_missing_imports = true

[tool.codespell]
skip = "*.cls,*.bst,*.bib"
ignore-words-list = "nwo,groth,ket,braket"
